syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.sports";

package com.glance.spaces.zapp.content.sports;

enum SportsType {
  SPORTS_TYPE_UNSPECIFIED = 0;
  FOOTBALL_LEAGUE = 1;
}